--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         <li class="buttons kickstarter">Zine Kickstarter</li>
         <li class="buttons art"><a href="art.html">Art</a></li>
         <li class="buttons itch"><a href="https://zodiolestes.itch.io/">ITCH.IO</a></li>
-        <li class="buttons twitter"><a href="https://twitter.com/ZODIOLESTES_">Twitter</a></li>
+        <li class="buttons twitter"><a href="https://twitter.com/ZODIOLESTES_">Twitter</a>
+          </li>
+        <li class="buttons contact"><a href="etc.html">Contact</a></li>
       </div>
       <div class="name">
     <h1>ZODIOLESTES</h1>
