--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <li class="buttons itch"><a href="https://zodiolestes.itch.io/">ITCH.IO</a></li>
         <li class="buttons twitter"><a href="https://twitter.com/ZODIOLESTES_">Twitter</a>
           </li>
-        <li class="buttons contact"><a href="etc.html">Contact</a></li>
+        <li class="buttons contact"><a href="etc.html">Contact Me</a></li>
       </div>
       <div class="name">
     <h1>ZODIOLESTES</h1>
